
2017-11-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c (undefined_error): always raise "not defined" error if
	  word is already qualified
	* parser.y, reserved.c, cobc.h: FR #265 added parsing for ACUCOBOL
	  graphical controls, control styles, control properties and rough
	  parsing of INQUIRE and MODIFY statements
	* tree.h, field.c (validate_pic, setup_parameters): set new attribute
	  pic->flag_is_calculated where picture wasn't originally specified
	  and don't check this pseudo PICTURE later.

2017-11-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: moved aliases VALUES/ZEROES/ZEROS to default.conf

2017-11-25  Ron Norman <rjn@inglenet.com>

	Bug #175 fixed: LENGTH OF constants with grouped fields
	* typeck.c: make sure field has been verified for constant LENGTH
	* field.c: set pic.category for POINTER and ignore PIC for it later
	* field.c (setup_parameters): set PIC 9(17) for pointer in 64 bit mode

2017-11-23  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix for bug #222 - for FUNCTION-ID and RECURSIVE,
	  generate all LINKAGE and LOCAL-STORAGE fields with the 'cob_field'
	  on the function stack instead of making them 'static'.
	  If static then the fields end up as a side effect with the same
	  memory address which is not correct.

2017-11-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added parsing for ARITHMETIC clause
	* parser.y, reserved.c, cobc.h: added context sensitivity for
	  SCREEN SECTION, adjusted reserved words to CB_CS_SCREEN and CB_CS_SET
	* parser.y: renamed "not" to much more clearer "not_expr" to prevent
	  confusing it with "flag_not"
	* reserved.c: moved aliases LOW-VALUES/HIGH-VALUES to default.conf
	* parser.y: moved reset of cobc_cs_check from _mnemonic_conv to end of
	  call_statement
	* reserved.c (lookup_reserved_word): fixed returning of context-sensitive
	  word without context (happened when the word *set* a context, too);